load("@crates_mcps//:defs.bzl", "all_crate_deps")
load("//bazel:defs.bzl", "nt_rust_binary", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# MCPS-010 object conformance runner library: vector model + Target trait +
# in-process ObjectTarget + RunReport. Depends on the pure mcps-core crate
# (cross-crate label) plus serde/serde_json from the isolated crates_mcps hub.
# mcps-conformance MAY use std::fs (loader); mcps-core stays pure (ADR-011/012).
nt_rust_library(
    name = "mcps_conformance_lib",
    srcs = [
        "src/echo_server.rs",
        "src/fixtures.rs",
        "src/http.rs",
        "src/http_target.rs",
        "src/lib.rs",
        "src/loader.rs",
        "src/runner.rs",
        "src/server.rs",
        "src/stdio.rs",
        "src/stdio_target.rs",
        "src/target.rs",
        "src/vector.rs",
    ],
    crate_name = "mcps_conformance",
    edition = "2021",
    deps = [
        "//mcps-core:mcps_core",
        "//mcps-proxy:mcps_proxy",
        "@crates_mcps//:serde",
        "@crates_mcps//:serde_json",
    ],
)

nt_rust_binary(
    name = "mcps_conformance",
    srcs = ["src/main.rs"],
    crate_name = "mcps_conformance_bin",
    edition = "2021",
    deps = [
        ":mcps_conformance_lib",
    ],
)

# MCPS-012: the documented MCP-S echo server over stdio. The stdio harness test
# launches this binary as a child process and drives signed JSON-RPC over its
# stdin/stdout.
nt_rust_binary(
    name = "mcps_stdio_server",
    srcs = ["src/stdio_server_main.rs"],
    crate_name = "mcps_stdio_server_bin",
    edition = "2021",
    deps = [
        ":mcps_conformance_lib",
    ],
)

# Object suite test: loads the committed vectors (SINGLE SOURCE OF TRUTH in the
# mcps-core package) via include_str! of the //mcps-core:vectors
# filegroup placed in compile_data — no runfiles, no duplication, no abs paths.
nt_rust_test(
    name = "object_suite_test",
    srcs = ["tests/object_suite_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    compile_data = ["//mcps-core:vectors"],
    edition = "2021",
    deps = [
        ":mcps_conformance_lib",
        "//mcps-core:mcps_core",
        "@crates_mcps//:serde_json",
    ],
)

# MCPS-011: native MCP-S echo server round-trip tests (in-process; no transport).
nt_rust_test(
    name = "echo_server_test",
    srcs = ["tests/echo_server_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcps_conformance_lib",
        "//mcps-core:mcps_core",
        "@crates_mcps//:serde_json",
    ],
)

# ADR-MCPS-034 (extends ADR-MCPS-030): method-transparency behavioral
# equivalence proof. Varies ONLY the JSON-RPC method (re-signing each, since
# method is in signing scope) across tools/list, tools/call, resources/list,
# prompts/list, and a fabricated x/nonexistent/custom, and asserts the Core
# verdict is IDENTICAL for an accepted envelope and (separately) a rejected one.
nt_rust_test(
    name = "method_transparency_test",
    srcs = ["tests/method_transparency_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcps_conformance_lib",
        "//mcps-core:mcps_core",
        "@crates_mcps//:serde_json",
    ],
)

# ADR-MCPS-034 (extends ADR-MCPS-030): static method-name drift guard. Scans the
# NON-TEST mcps-core/src for banned concrete MCP method-name literals
# (tools/list, tools/call, resources/list, resources/read, prompts/list,
# prompts/get, sampling/createMessage, completion/complete) and FAILS if any is
# added to production Core. The Core src tree is delivered as data (runfiles);
# the guard resolves lib.rs and scans its parent dir from DISK, with the
# mcps-test-paths cargo fallback — the same scheme as the drift_guard.
nt_rust_test(
    name = "method_name_drift_guard_test",
    srcs = ["tests/method_name_drift_guard_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = [
        "//mcps-core:src_files",
        "//mcps-core:src/lib.rs",
    ],
    edition = "2021",
    env = {
        "MCPS_CORE_SRC_LIB": "$(rlocationpath //mcps-core:src/lib.rs)",
    },
    deps = [
        "//mcps-test-paths:mcps_test_paths",
        "@crates_mcps//:serde_json",
    ],
)

# ADR-MCPS-035: audit-evidence vocabulary drift guard. Asserts the MCP-S audit
# vocabulary (mcps-core/src/audit.rs) derives every rejection reason from the
# frozen McpsError::wire_code() taxonomy (mcps-core/src/error.rs is the sole
# authority) and that the success-event set is EXACTLY the two-item allowlist.
# Both Core source files are delivered as data (runfiles); the guard reads them
# from DISK (via $(rlocationpath), with the mcps-test-paths cargo fallback) — the
# same scheme as the method-name drift guard — so a newly added McpsError variant
# (new frozen wire_code) or an edited audit vocabulary is re-read from reality.
nt_rust_test(
    name = "audit_vocabulary_guard_test",
    srcs = ["tests/audit_vocabulary_guard_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = ["//mcps-core:src_files"],
    edition = "2021",
    env = {
        "MCPS_CORE_SRC_ERROR": "$(rlocationpath //mcps-core:src/error.rs)",
        "MCPS_CORE_SRC_AUDIT": "$(rlocationpath //mcps-core:src/audit.rs)",
    },
    deps = [
        "//mcps-test-paths:mcps_test_paths",
    ],
)

# ADR-MCPS-036 (gate item 4): forbidden-claim guard. Scans the proposal-facing
# docs (security-boundary, v0.5 claim matrix, threat-coverage, composability,
# proposal-scope) from DISK (via runfiles) and FAILS if any forbidden over-claim
# wording appears as an ASSERTED (live) claim — a phrase inside a "Forbidden
# claim" table column or a negated sentence is legitimately NAMING the non-goal
# and is allowed. The optional add-on asserts docs/SECURITY_BOUNDARY.md is a
# redirect stub with no live claim (ADR-MCPS-032). Docs delivered as data
# ($(rlocationpath)), with the mcps-test-paths cargo fallback — the same scheme
# as the drift_guard / method-name drift guard. Proposal-facing docs ONLY: no
# historical ADRs, no v0.3 files, no fixtures.
nt_rust_test(
    name = "forbidden_claim_guard_test",
    srcs = ["tests/forbidden_claim_guard_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = [
        "//docs:SECURITY_BOUNDARY.md",
        "//docs:spec/security-boundary.md",
        "//docs:spec/v0.5-claim-matrix.md",
        "//docs:spec/threat-coverage-matrix.md",
        "//docs:spec/composability.md",
        "//docs:spec/proposal-scope.md",
    ],
    edition = "2021",
    env = {
        "MCPS_DOC_SECURITY_BOUNDARY": "$(rlocationpath //docs:spec/security-boundary.md)",
        "MCPS_DOC_CLAIM_MATRIX": "$(rlocationpath //docs:spec/v0.5-claim-matrix.md)",
        "MCPS_DOC_THREAT_COVERAGE": "$(rlocationpath //docs:spec/threat-coverage-matrix.md)",
        "MCPS_DOC_COMPOSABILITY": "$(rlocationpath //docs:spec/composability.md)",
        "MCPS_DOC_PROPOSAL_SCOPE": "$(rlocationpath //docs:spec/proposal-scope.md)",
        "MCPS_DOC_SECURITY_BOUNDARY_STUB": "$(rlocationpath //docs:SECURITY_BOUNDARY.md)",
    },
    deps = [
        "//mcps-test-paths:mcps_test_paths",
    ],
)

# MCPS-013: Streamable HTTP harness — runs the documented echo server on a
# loopback socket and drives the same outcome matrix over HTTP, then asserts
# HTTP == stdio == object for every shared request vector (the transport-
# agnostic headline claim). Needs the stdio server binary for the cross-
# transport comparison, delivered via runfiles (same MCPS_STDIO_SERVER scheme).
nt_rust_test(
    name = "http_harness_test",
    srcs = ["tests/http_harness_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    compile_data = ["//mcps-core:vectors"],
    data = [":mcps_stdio_server"],
    edition = "2021",
    env = {"MCPS_STDIO_SERVER": "$(rlocationpath :mcps_stdio_server)"},
    deps = [
        ":mcps_conformance_lib",
        "//mcps-core:mcps_core",
        "@crates_mcps//:serde_json",
    ],
)

# MCPS-017: acceptance — a sidecar-wrapped ordinary server AND a native MCP-S
# server run the SAME outcome matrix over BOTH transports (stdio + HTTP) and must
# produce identical Core outcomes. The host (which holds the key, not the model)
# signs the requests. Needs the stdio server binary (native + proxy modes).
nt_rust_test(
    name = "acceptance_test",
    srcs = ["tests/acceptance_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    compile_data = ["//mcps-core:vectors"],
    data = [":mcps_stdio_server"],
    edition = "2021",
    env = {"MCPS_STDIO_SERVER": "$(rlocationpath :mcps_stdio_server)"},
    deps = [
        ":mcps_conformance_lib",
        "//mcps-core:mcps_core",
        "//mcps-host:mcps_host",
        "@crates_mcps//:serde_json",
    ],
)

# MCPS-031: drift-guarded conformance manifest. The committed
# conformance_manifest.json is the SINGLE SOURCE OF TRUTH for the conformance
# corpus (every vector + every //... rust_test target). This
# guard reads the manifest, the Core vector fixtures, the Phase 5 vectors, and
# every BUILD.bazel from DISK (via runfiles) and FAILS on any drift: a vector on
# disk missing from the manifest, a manifest entry with no vector, a stale
# (hardcoded-and-rotted) count, or a rust_test target added/removed without a
# manifest update. Counts are derived from reality, never trusted as written.
nt_rust_test(
    name = "drift_guard_test",
    srcs = ["tests/drift_guard_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = [
        "conformance_manifest.json",
        "BUILD.bazel",
        "//mcps-core:vectors",
        "//mcps-core:tests/vectors/manifest.json",
        "//mcps-core:BUILD.bazel",
        "//mcps-host:BUILD.bazel",
        "//mcps-policy:BUILD.bazel",
        "//mcps-policy:tests/vectors/phase5_vectors.json",
        "//mcps-proxy:BUILD.bazel",
        "//mcps-demo:BUILD.bazel",
        "//mcps-demo-server:BUILD.bazel",
        "//mcps-transport:BUILD.bazel",
        "//mcps-demo-fileserver:BUILD.bazel",
    ],
    edition = "2021",
    env = {
        "MCPS_MANIFEST": "$(rlocationpath conformance_manifest.json)",
        "MCPS_CORE_MANIFEST": "$(rlocationpath //mcps-core:tests/vectors/manifest.json)",
        "MCPS_PHASE5": "$(rlocationpath //mcps-policy:tests/vectors/phase5_vectors.json)",
        "MCPS_BUILD_CONFORMANCE": "$(rlocationpath BUILD.bazel)",
        "MCPS_BUILD_CORE": "$(rlocationpath //mcps-core:BUILD.bazel)",
        "MCPS_BUILD_HOST": "$(rlocationpath //mcps-host:BUILD.bazel)",
        "MCPS_BUILD_POLICY": "$(rlocationpath //mcps-policy:BUILD.bazel)",
        "MCPS_BUILD_PROXY": "$(rlocationpath //mcps-proxy:BUILD.bazel)",
        # MCPS-082: the four previously-unscanned packages.
        "MCPS_BUILD_DEMO": "$(rlocationpath //mcps-demo:BUILD.bazel)",
        "MCPS_BUILD_DEMO_SERVER": "$(rlocationpath //mcps-demo-server:BUILD.bazel)",
        "MCPS_BUILD_TRANSPORT": "$(rlocationpath //mcps-transport:BUILD.bazel)",
        "MCPS_BUILD_FILESERVER": "$(rlocationpath //mcps-demo-fileserver:BUILD.bazel)",
    },
    deps = [
        "//mcps-test-paths:mcps_test_paths",
        "@crates_mcps//:serde_json",
    ],
)

# MCPS-070: security traceability manifest drift guard. The committed
# security_traceability_manifest.json maps each MCP-S security property
# (P6.6A + P6.6B) to the Bazel test target + test fn that proves it. This guard
# reads the manifest, every relevant BUILD.bazel, and every referenced test
# source from DISK (via runfiles) and FAILS on drift: a manifest target no
# BUILD.bazel declares as nt_rust_test, a manifest test_fn absent from its source
# file, a source/target package mismatch, a stale recorded count, or a missing
# server-auth case. Renames/removals are caught by re-reading reality.
nt_rust_test(
    name = "security_traceability_guard_test",
    srcs = ["tests/security_traceability_guard_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = [
        "security_traceability_manifest.json",
        "BUILD.bazel",
        "tests/object_suite_test.rs",
        "tests/method_transparency_test.rs",
        "tests/method_name_drift_guard_test.rs",
        "tests/audit_vocabulary_guard_test.rs",
        "tests/forbidden_claim_guard_test.rs",
        "//docs:spec/v0.5-claim-matrix.md",
        "//mcps-core:BUILD.bazel",
        "//mcps-host:BUILD.bazel",
        "//mcps-host:tests/host_session_test.rs",
        "//mcps-policy:BUILD.bazel",
        "//mcps-proxy:BUILD.bazel",
        "//mcps-proxy:tests/persistent_scope_test.rs",
        "//mcps-proxy:tests/persistent_inner_test.rs",
        "//mcps-proxy:tests/persistent_session_test.rs",
        "//mcps-proxy:tests/proxy_test.rs",
        "//mcps-proxy:tests/key_source_test.rs",
        "//mcps-proxy:tests/dev_env_key_source_test.rs",
        "//mcps-proxy:tests/keyset_admission_test.rs",
        "//mcps-demo:BUILD.bazel",
        "//mcps-demo:tests/demo_negative_e2e_test.rs",
        "//mcps-demo:tests/demo_transport_e2e_test.rs",
        "//mcps-demo:tests/demo_e2e_persistent_test.rs",
        "//mcps-demo:tests/demo_posture_e2e_test.rs",
        "//mcps-demo-server:BUILD.bazel",
        "//mcps-demo-server:tests/received_log_test.rs",
        "//mcps-transport:BUILD.bazel",
        "//mcps-transport:tests/mtls_client_test.rs",
    ],
    edition = "2021",
    env = {
        "MCPS_SECURITY_MANIFEST": "$(rlocationpath security_traceability_manifest.json)",
        "MCPS_BUILD_CONFORMANCE": "$(rlocationpath BUILD.bazel)",
        "MCPS_BUILD_CORE": "$(rlocationpath //mcps-core:BUILD.bazel)",
        "MCPS_BUILD_HOST": "$(rlocationpath //mcps-host:BUILD.bazel)",
        "MCPS_BUILD_POLICY": "$(rlocationpath //mcps-policy:BUILD.bazel)",
        "MCPS_BUILD_PROXY": "$(rlocationpath //mcps-proxy:BUILD.bazel)",
        "MCPS_BUILD_DEMO": "$(rlocationpath //mcps-demo:BUILD.bazel)",
        "MCPS_BUILD_DEMO_SERVER": "$(rlocationpath //mcps-demo-server:BUILD.bazel)",
        "MCPS_BUILD_TRANSPORT": "$(rlocationpath //mcps-transport:BUILD.bazel)",
        "MCPS_CLAIM_MATRIX": "$(rlocationpath //docs:spec/v0.5-claim-matrix.md)",
        "MCPS_SRC_OBJECT_SUITE": "$(rlocationpath tests/object_suite_test.rs)",
        "MCPS_SRC_METHOD_TRANSPARENCY": "$(rlocationpath tests/method_transparency_test.rs)",
        "MCPS_SRC_METHOD_NAME_DRIFT_GUARD": "$(rlocationpath tests/method_name_drift_guard_test.rs)",
        "MCPS_SRC_AUDIT_VOCABULARY_GUARD": "$(rlocationpath tests/audit_vocabulary_guard_test.rs)",
        "MCPS_SRC_FORBIDDEN_CLAIM_GUARD": "$(rlocationpath tests/forbidden_claim_guard_test.rs)",
        "MCPS_SRC_HOST_SESSION": "$(rlocationpath //mcps-host:tests/host_session_test.rs)",
        "MCPS_SRC_KEYSET_ADMISSION": "$(rlocationpath //mcps-proxy:tests/keyset_admission_test.rs)",
        "MCPS_SRC_PERSISTENT_SCOPE": "$(rlocationpath //mcps-proxy:tests/persistent_scope_test.rs)",
        "MCPS_SRC_PERSISTENT_INNER": "$(rlocationpath //mcps-proxy:tests/persistent_inner_test.rs)",
        "MCPS_SRC_PERSISTENT_SESSION": "$(rlocationpath //mcps-proxy:tests/persistent_session_test.rs)",
        "MCPS_SRC_PROXY": "$(rlocationpath //mcps-proxy:tests/proxy_test.rs)",
        "MCPS_SRC_KEY_SOURCE": "$(rlocationpath //mcps-proxy:tests/key_source_test.rs)",
        "MCPS_SRC_DEV_ENV_KEY_SOURCE": "$(rlocationpath //mcps-proxy:tests/dev_env_key_source_test.rs)",
        "MCPS_SRC_DEMO_NEGATIVE_E2E": "$(rlocationpath //mcps-demo:tests/demo_negative_e2e_test.rs)",
        "MCPS_SRC_DEMO_TRANSPORT_E2E": "$(rlocationpath //mcps-demo:tests/demo_transport_e2e_test.rs)",
        "MCPS_SRC_DEMO_E2E_PERSISTENT": "$(rlocationpath //mcps-demo:tests/demo_e2e_persistent_test.rs)",
        "MCPS_SRC_DEMO_POSTURE_E2E": "$(rlocationpath //mcps-demo:tests/demo_posture_e2e_test.rs)",
        "MCPS_SRC_RECEIVED_LOG": "$(rlocationpath //mcps-demo-server:tests/received_log_test.rs)",
        "MCPS_SRC_MTLS_CLIENT": "$(rlocationpath //mcps-transport:tests/mtls_client_test.rs)",
    },
    deps = [
        "//mcps-test-paths:mcps_test_paths",
        "@crates_mcps//:serde_json",
    ],
)

# MCPS-012: stdio harness — launches the mcps_stdio_server child process and
# drives the full outcome matrix over real stdin/stdout, asserting identical
# Core outcomes to the in-process object target. The server binary is delivered
# via runfiles; its path is passed through MCPS_STDIO_SERVER ($(rlocationpath))
# and resolved against TEST_SRCDIR in the test (no runfiles-crate dependency).
nt_rust_test(
    name = "stdio_harness_test",
    srcs = ["tests/stdio_harness_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    compile_data = ["//mcps-core:vectors"],
    data = [":mcps_stdio_server"],
    edition = "2021",
    env = {"MCPS_STDIO_SERVER": "$(rlocationpath :mcps_stdio_server)"},
    deps = [
        ":mcps_conformance_lib",
        "//mcps-core:mcps_core",
        "@crates_mcps//:serde_json",
    ],
)
