[package]
name = "mcps-demo-fileserver"
version = "0.8.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Minimal, MCP-S-unaware stdio MCP server (demo target for the MCP-S sidecar)."

# MCPS-045 (MCPS-EPIC-P6.5): an ORDINARY MCP server that knows nothing about
# MCP-S signing/envelopes/verified-context. It depends only on the pure serde
# subset plus thiserror — no other in-repo crate, no async runtime. It MAY use
# std::fs / std::io (it is a filesystem server), unlike the pure mcps-core.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mcps-test-paths = { path = "../mcps-test-paths" }

[lib]
name = "mcps_demo_fileserver"
path = "src/lib.rs"

[[bin]]
name = "mcps-demo-fileserver"
path = "src/main.rs"
